test/fail/basic_syntax/missing_parenth.lly
#[
SyntaxError: Unexpected token 'end of file'.
    from missing_parenth.lly:6
]#

var a: Integer = 0   a = ((a)
